GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.

============================================================

PyKota NEWS :
       
    - 1.26alpha3 (2007-01-31) :
    
        - Doesn't print banners anymore when the user cancelled the print job.
        
    - 1.26alpha2 (2007-01-18) :
    
        - Fixed a problem with pksetup when several instances of PostgreSQL
          were installed.
          
        - Fixed a failure in edpykota to cleanly delete non existing entries.
        
        - Fixed email headers.
        
        - Changed copyright years.
        
    - 1.26alpha1 (2007-01-17) :
    
        - Stefan Wold contributed a patch to make autopykota able to retrieve
          the email address to use for a particular user when creating it.
          
        - Added support for pkpgcounter v2.13's GC pseudo colorspace if you
          only want to differentiate grayscale pages from colored pages.
          
        - Fixed a compatibility problem dumpykota's "--format cups" command line
          option.
          
    - 1.25 (2006-12-03) :
       
        - Fixed a minor problem in pkprinters with the --cups command line option.
        
        - Improved readablity when pkrefund asks for confirmation.
        
        - Finished the french translation.
        
    - 1.25beta (2006-11-30) :
    
        - Fixed a bug wrt ink accounting, thanks to Netzwerkler.
    
        - Updated all message catalogs and manual pages.
        
    - 1.25alpha18 (2006-11-30) :
    
        - Make the data dumper accept jobid= as an additional filter, just
          like pkrefund and pkinvoice.
        
        - Make pkinvoice internally work like pkrefund.
        
        - Fixed a severe bug in the LDAP backend wrt the overcharging factor.
        